# module-tencent_cloud_sdk

./: CMakeLists.txt  README.md  build.sh
src/: tencent_cloud_sdk.cpp  tencent_cloud_sdk.h
